prevent layout shift. Center stroke order

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,9 @@ button {
 .quiz {
   font-size: 2rem;
 }
+
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
